# AiRemote

./: .gitignore  README.md
.github/workflows/: build-windows.yml
docs/superpowers/plans/: 2026-07-21-remote-input-safety.md  2026-07-22-hid-noise-input-fix.md
docs/superpowers/specs/: 2026-07-21-remote-input-safety-design.md  2026-07-22-hid-noise-input-design.md
esp32-bridge/: CMakeLists.txt  README.md  partitions.csv  sdkconfig.defaults
esp32-bridge/components/adpcm/: CMakeLists.txt  adpcm.c
esp32-bridge/components/adpcm/include/: adpcm.h
esp32-bridge/components/ble_central/: CMakeLists.txt  ble_central.c
esp32-bridge/components/ble_central/include/: ble_central.h
esp32-bridge/components/usb_hid/: CMakeLists.txt  usb_hid.c
esp32-bridge/components/usb_hid/include/: usb_hid.h
esp32-bridge/components/voice_dsp/: CMakeLists.txt  voice_dsp.c
esp32-bridge/components/voice_dsp/include/: voice_dsp.h
esp32-bridge/docs/: PRD.md
esp32-bridge/main/: CMakeLists.txt  app_events.c  app_events.h  app_fsm.c  app_fsm.h  main.c
mac-app/: LICENSE  README.md  build.sh  install.sh
mac-app/Resources/: AppIcon.icns  Info.plist
mac-app/Sources/: Engine.swift  Model.swift  RemoteInputSafety.swift  UI.swift  VoiceGlobeMapper.swift  main.swift
mac-app/Tests/: RemoteInputSafetyTests.swift
win-app/: README.md
win-app/src/: index.html
win-app/src-tauri/: Cargo.toml  tauri.conf.json
win-app/src-tauri/src/: adpcm.rs  audio.rs  ble.rs  config.rs  diagnostics.rs  dsp.rs  hid.rs  lib.rs  mapping.rs  raw_input.rs  voice_keys.rs
